Fixed textarea size on mobile

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -87,9 +87,6 @@ input::before {
 @media only screen and (max-width: 850px) {
 }
 @media only screen and (max-width: 600px) {
-  .contact__input {
-    width: 100%;
-  }
 }
 @media only screen and (max-width: 300px) {
   .contact__input {
